[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Poppins48.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/Fonts/Poppins32.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scenes/Fade/Fade.gd" type="Script" id=4]
[ext_resource path="res://scenes/Menu/MenuButton.tscn" type="PackedScene" id=5]

[node name="Menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BannerLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = 1280.0
margin/bottom = 320.0
custom_fonts/font = ExtResource( 2 )
text = "WORDYA"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StatusLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 550.0
margin/right = 1280.0
margin/bottom = 595.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="Buttons" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="OnlineButton" parent="Buttons" instance=ExtResource( 5 )]

transform/pos = Vector2( 490, 400 )
button_text = "Word of the Day"

[node name="OfflineButton" parent="Buttons" instance=ExtResource( 5 )]

transform/pos = Vector2( 490, 466 )
button_text = "Play Offline"


